@@ -1,3 +1,8 @@
+2007-11-19  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Add generic run_simple_dialog.
+
 2007-11-16  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-progress-info.c:
